--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@emotion/react": "^11.11.3",
+        "@emotion/styled": "^11.11.0",
+        "@mui/material": "^5.15.4",
+        "flowbite": "^2.2.1",
+        "flowbite-react": "^0.7.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-modal": "^3.16.1",
