--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "postcss": "^8.4.32",
         "prettier": "3.1.1",
         "tailwindcss": "^3.4.0",
+        "typescript": "^5.3.3",
         "vite": "^5.0.8"
     }
 }
