--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-modal": "^3.16.1",
+        "react-router-dom": "^6.21.3",
         "tailwind": "^4.0.0",
         "tailwindcss-font-inter": "^3.0.1",
         "uuid": "^9.0.1"
